# actiondeck-ai

./: .env.example  .gitignore  Makefile  README.md  package.json
apps/api/: .env.example  README.md  main.py  pyproject.toml
apps/api/app/: __init__.py  settings.py
apps/api/app/agents/: __init__.py  graph_workflow.py  nodes.py  runtime.py  state.py  workflow.py
apps/api/app/routes/: action_cards.py  action_plan.py  agent_runs.py  calendar_events.py  evaluations.py  inbox_items.py  integrations.py
apps/api/app/schemas/: __init__.py  action_card.py  action_plan.py  agent_critic.py  agent_route.py  agent_run.py  agent_trace.py  calendar_availability.py  calendar_event.py  evaluation.py  evidence.py  google_calendar.py  inbox_item.py  review_event.py
apps/api/app/services/: action_card_store.py  action_plan_service.py  agent_run_service.py  agent_run_store.py  agent_trace_store.py  calendar_availability.py  calendar_event_store.py  evaluation_service.py  evidence_embedding.py  evidence_store.py  evidence_vector_store.py  gemini_client.py  google_calendar_service.py  inbox_item_store.py  oauth_connection_store.py  review_event_store.py
apps/api/scripts/: check_app_smoke.py  check_db.py  check_eval.py  check_pgvector.py  seed_calendar_events.py  seed_evidence_vectors.py
apps/api/tests/: test_action_plan_service.py  test_calendar_availability.py  test_calendar_events_api.py  test_google_calendar_integration.py  test_graph_workflow.py
apps/web/: .env.example  (+4 more)
docs/: README.md  action_card_schema.md  agent_workflow.md  architecture.md  demo_scenario.md  handoff.md
(+41 files in other folders)
